--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description: The use of demographically misrepresentative datasets or inappropri
 avatar: /images/blank.png
 
 
-faculty1: L. Elisa Celis
-faculty2: Nisheeth K. Vishnoi
+faculty1: Elisa Celis
+faculty2: Nisheeth Vishnoi
 
 faculty1Site: https://datascienceethics.org
 faculty2Site: https://www.cs.yale.edu/homes/vishnoi
@@ -27,7 +27,7 @@ phdStudent1Site: https://vijaykeswani.github.io/
 phdStudent2: Anay Mehrotra
 phdStudent2Site: https://anaymehrotra.github.io/
 
-undergrad1: Chris Hayes, Yi Chern Tan
+undergrad1: Chris Hays, Yi Chern Tan
 
 alumni: Damian Straszak, Sayash Kapoor, Ozan Yildiz, Nishtha Madan
 
