--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ undergrad:
   - name: Yi Chern Tan
     website: \#
 
-alumni: Damian Straszak, Sayash Kapoor, Ozan Yildiz, Nishtha Madan
+alumni: Nishtha Madan, Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
 
 
 
