--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ demos:
       website: https://github.com/Trusted-AI/AIF360/blob/master/examples/demo_meta_classifier.ipynb
       image: images/classification.png
 
-    - title: Rebalancing Data 
+    - title: Debiasing Data 
       description: Python notebook to construct and evaluate unbiased maximum-entropy distributions from biased datasets
       website: https://github.com/vijaykeswani/Fair-Max-Entropy-Distributions/blob/master/FairMaxEnt-expts-1.ipynb
       image: images/rebalancing.png
