--- a/_config.yml
+++ b/_config.yml
@@ -36,45 +36,46 @@ undergrad:
   - name: Yi Chern Tan
     website: \#
 
-alumni: Nishtha Madan, Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
+alumni: Abhibhav Garg, Nishtha Madan, Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
 
 
 
 ###### Demo information
 
 demos:
-    - title: Polarization 
-      description: Prototype of a balanced content delivery engine
-      website: https://fair-personalized-news.herokuapp.com/fast/diversity.php
-      image: images/polarization.png
-
-    - title: Online Advertisements 
-      description: Simple platform to serve fair advertisements
-      website: https://fair-online-advertising.herokuapp.com
-      image: images/onlineAd.png
-
-    - title: Multiwinner Voting 
-      description: Framework to demonstrate fair multiwinner voting algorithms
-      website: https://fair-voting-demo.herokuapp.com
-      image: images/voting.png
-
-    - title: Sampling 
-      description: Prototype to return gender-balanced image search results
+    
+    - title: Data Summarization 
+      description: Prototype for gender-balanced image search
       website: https://fair-image-search.herokuapp.com/imageDiversity.php
       image: images/sampling.png
 
+    - title: Polarization 
+      description: Prototype for politically-balanced and personalized newsfeeds
+      website: https://fair-personalized-news.herokuapp.com/fast/diversity.php
+      image: images/polarization.png
+
+    - title: Multiwinner Voting 
+      description: Elect a committee that is balanced across different attribute types. Deployed in Swiss elections.
+      website: https://fair-voting-demo.herokuapp.com
+      image: images/voting.png
+
     - title: Ranking 
-      description: Balanced ranking framework with applications to search engines, news feeds and recommendation systems
+      description: Prototype for gender-balanced rankings with applications to search engines, newsfeeds, and recommendation systems
       website: http://balanced-ranking.herokuapp.com
       image: images/ranking.png
 
     - title: Classification 
-      description: A meta-classification algorithm to return fair and accurate prediction, with respect to various fairness metrics
+      description: Python notebook for a meta fair classification algorithm, works for various fairness metrics. Deployed in IBM AIF 360.
       website: https://github.com/Trusted-AI/AIF360/blob/master/examples/demo_meta_classifier.ipynb
       image: images/classification.png
 
+    - title: Online Advertising
+      description: Prototype for gender-balanced and auction-based online advertising platform
+      website: https://fair-online-advertising.herokuapp.com
+      image: images/onlineAd.png
+
     - title: Debiasing Data 
-      description: Python notebook to construct and evaluate unbiased maximum-entropy distributions from biased datasets
+      description: Python notebook for learning and evaluating unbiased maximum-entropy distributions from biased datasets
       website: https://github.com/vijaykeswani/Fair-Max-Entropy-Distributions/blob/master/FairMaxEnt-expts-1.ipynb
       image: images/rebalancing.png
 
