--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,13 @@
 name: Controlling Bias in Artificial Intelligence
 
 # Short bio or description (displayed in the header)
-description: The use of demographically misrepresentative datasets, inappropriate models or algorithms often leads to incorporation of social biases in the results of automated decision making algorithms. Context-aware design and implementation of machine learning and artificial intelligence models is, therefore, becoming increasingly necessary. Our group aims to address social biases in AI, with a focus on providing feasible alternatives to currently-used biased models. 
+description: The use of standard datasets, models, and algorithms often incorporates
+and exacerbates social biases in systems that use machine learning and
+artificial intelligence. Context-aware design and implementation of
+automated decision making algorithms is, therefore, an important and
+necessary venture. Our group aims to mitigate social biases in AI,
+with a focus on providing feasible debiased alternatives to
+currently-used models.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/blank.png
 
