--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ undergrad:
   - name: Yi Chern Tan
     website: \#
 
-alumni: Abhibhav Garg, Nishtha Madan, Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
+alumni: Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
 
 
 
@@ -51,37 +51,37 @@ alumni: Abhibhav Garg, Nishtha Madan, Sayash Kapoor, Farnood Salehi, Damian Stra
 demos:
     
     - title: Data Summarization 
-      description: Prototype for gender-balanced image search
+      description: Prototype for gender-balanced image search.
       website: https://fair-image-search.herokuapp.com/imageDiversity.php
       image: images/sampling.png
 
     - title: Polarization 
-      description: Prototype for politically-balanced and personalized newsfeeds
+      description: Prototype for politically-balanced and personalized newsfeeds.
       website: https://fair-personalized-news.herokuapp.com/fast/diversity.php
       image: images/polarization.png
 
     - title: Multiwinner Voting 
-      description: Elect a committee that is balanced across different attribute types. Deployed in Swiss elections.
+      description: Elect a committee that is balanced across different attribute types. <b>Deployed in Swiss elections.</b>
       website: https://fair-voting-demo.herokuapp.com
       image: images/voting.png
 
     - title: Ranking 
-      description: Prototype for gender-balanced rankings with applications to search engines, newsfeeds, and recommendation systems
+      description: Prototype for gender-balanced rankings with applications to search engines, newsfeeds, and recommendation systems.
       website: http://balanced-ranking.herokuapp.com
       image: images/ranking.png
 
     - title: Classification 
-      description: Python notebook for a meta fair classification algorithm, works for various fairness metrics. Deployed in IBM AIF 360.
+      description: Python notebook for a meta fair classification algorithm, works for various fairness metrics. <b>Deployed in IBM AIF 360.</b>
       website: https://github.com/Trusted-AI/AIF360/blob/master/examples/demo_meta_classifier.ipynb
       image: images/classification.png
 
     - title: Online Advertising
-      description: Prototype for gender-balanced and auction-based online advertising platform
+      description: Prototype for gender-balanced and auction-based online advertising platform.
       website: https://fair-online-advertising.herokuapp.com
       image: images/onlineAd.png
 
     - title: Debiasing Data 
-      description: Python notebook for learning and evaluating unbiased maximum-entropy distributions from biased datasets
+      description: Python notebook for learning and evaluating unbiased maximum-entropy distributions from biased datasets.
       website: https://github.com/vijaykeswani/Fair-Max-Entropy-Distributions/blob/master/FairMaxEnt-expts-1.ipynb
       image: images/rebalancing.png
 
