--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,8 @@
 name: Controlling Bias in Artificial Intelligence
 
 # Short bio or description (displayed in the header)
-description: The use of standard datasets, models, and algorithms often incorporates
-and exacerbates social biases in systems that use machine learning and
-artificial intelligence. Context-aware design and implementation of
-automated decision making algorithms is, therefore, an important and
-necessary venture. Our group aims to mitigate social biases in AI,
-with a focus on providing feasible debiased alternatives to
-currently-used models.
+description: The use of standard datasets, models, and algorithms often incorporates and exacerbates social biases in systems that use machine learning and artificial intelligence. Context-aware design and implementation of automated decision making algorithms is, therefore, an important and necessary venture. Our group aims to mitigate social biases in AI, with a focus on providing feasible debiased alternatives to currently-used models.
+
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/blank.png
 
