--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ avatar: /images/blank.png
 
 faculty:
   - name: Elisa Celis,
-    website: https://datascienceethics.org
+    website: https://datascienceethics.org/elisacelis/
 
   - name: Nisheeth Vishnoi
     website: https://www.cs.yale.edu/homes/vishnoi
