--- a/_config.yml
+++ b/_config.yml
@@ -31,13 +31,8 @@ phd:
     website: https://anaymehrotra.github.io/
 
 undergrad:
-  - name: Chris Hays,
-    website: \#
 
-  - name: Yi Chern Tan
-    website: \#
-
-alumni: Sayash Kapoor, Farnood Salehi, Damian Straszak, Julia Wei 
+alumni: Chris Hays, Sayash Kapoor, Farnood Salehi, Damian Straszak, Yi Chern Tan, Julia Wei 
 
 
 
